Version3/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM ID VARIABLE SP X END
Rule 2     VARIABLE -> DIM IDLIST AS TIPO SEMMICOLON VARIABLE
Rule 3     VARIABLE -> <empty>
Rule 4     IDLIST -> ID
Rule 5     IDLIST -> IDLIST COMMA ID
Rule 6     IDLIST -> <empty>
Rule 7     TIPO -> WORD
Rule 8     TIPO -> FLOAT
Rule 9     TIPO -> ARRAY DCLARRAY
Rule 10    TIPO -> MATRIX DCLMATRIX
Rule 11    TIPO -> CUBE DCLCUBE
Rule 12    DCLARRAY -> LBRACKET Z RBRACKET
Rule 13    DCLMATRIX -> LBRACKET Z RBRACKET LBRACKET Z RBRACKET
Rule 14    DCLCUBE -> LBRACKET Z RBRACKET LBRACKET Z RBRACKET LBRACKET Z RBRACKET
Rule 15    Z -> NUMBER
Rule 16    Z -> ID
Rule 17    SP -> SUBPROCEDURE ID X ENDSUB SEMMICOLON SP
Rule 18    SP -> <empty>
Rule 19    X -> STATEMENTS SEMMICOLON X
Rule 20    X -> <empty>
Rule 21    STATEMENTS -> LET U ASSIGN E
Rule 22    STATEMENTS -> PRINT Q
Rule 23    STATEMENTS -> INPUT TEXT GTGT U
Rule 24    STATEMENTS -> CLS
Rule 25    STATEMENTS -> IF EL THEN X ELSE1 ENDIF
Rule 26    STATEMENTS -> WHILE EL X WHEND
Rule 27    STATEMENTS -> DO X LOOPUNTIL EL ENDO
Rule 28    STATEMENTS -> FOR O TO E X NEXT
Rule 29    STATEMENTS -> GOSUB ID
Rule 30    O -> E
Rule 31    O -> E ASSIGN E
Rule 32    U -> ID
Rule 33    U -> ID DCLARRAY
Rule 34    U -> ID DCLMATRIX
Rule 35    U -> ID DCLCUBE
Rule 36    Q -> LPARENT U RPARENT
Rule 37    Q -> TEXT
Rule 38    TEXT -> LPARENT STRING H RPARENT
Rule 39    TEXT -> <empty>
Rule 40    H -> PLUS STRING H
Rule 41    H -> PLUS U H
Rule 42    H -> <empty>
Rule 43    ELSE1 -> ELSE X
Rule 44    ELSE1 -> <empty>
Rule 45    E -> E PLUS T
Rule 46    E -> E MINUS T
Rule 47    E -> T
Rule 48    T -> T TIMES F
Rule 49    T -> T DIVIDE F
Rule 50    T -> F
Rule 51    F -> NUMBER
Rule 52    F -> U
Rule 53    F -> LPARENT E RPARENT
Rule 54    EL -> EL OR TL
Rule 55    EL -> TL NOT
Rule 56    EL -> TL
Rule 57    TL -> TL AND FL
Rule 58    TL -> FL
Rule 59    FL -> K OPREL K
Rule 60    FL -> LPARENT EL RPARENT
Rule 61    OPREL -> LT
Rule 62    OPREL -> LTE
Rule 63    OPREL -> GT
Rule 64    OPREL -> GTE
Rule 65    OPREL -> NE
Rule 66    OPREL -> EQUAL
Rule 67    K -> ID
Rule 68    K -> NUMBER

Terminals, with rules where they appear

AND                  : 57
ARRAY                : 9
AS                   : 2
ASSIGN               : 21 31
CLS                  : 24
COMMA                : 5
CUBE                 : 11
DIM                  : 2
DIVIDE               : 49
DO                   : 27
ELSE                 : 43
END                  : 1
ENDIF                : 25
ENDO                 : 27
ENDSUB               : 17
EQUAL                : 66
FLOAT                : 8
FOR                  : 28
GOSUB                : 29
GT                   : 63
GTE                  : 64
GTGT                 : 23
ID                   : 1 4 5 16 17 29 32 33 34 35 67
IF                   : 25
INPUT                : 23
LBRACKET             : 12 13 13 14 14 14
LET                  : 21
LOOPUNTIL            : 27
LPARENT              : 36 38 53 60
LT                   : 61
LTE                  : 62
MATRIX               : 10
MINUS                : 46
NE                   : 65
NEXT                 : 28
NOT                  : 55
NUMBER               : 15 51 68
OR                   : 54
PLUS                 : 40 41 45
PRINT                : 22
PROGRAM              : 1
RBRACKET             : 12 13 13 14 14 14
RPARENT              : 36 38 53 60
SEMMICOLON           : 2 17 19
STRING               : 38 40
SUBPROCEDURE         : 17
THEN                 : 25
TIMES                : 48
TO                   : 28
WHEND                : 26
WHILE                : 26
WORD                 : 7
error                : 

Nonterminals, with rules where they appear

DCLARRAY             : 9 33
DCLCUBE              : 11 35
DCLMATRIX            : 10 34
E                    : 21 28 30 31 31 45 46 53
EL                   : 25 26 27 54 60
ELSE1                : 25
F                    : 48 49 50
FL                   : 57 58
H                    : 38 40 41
IDLIST               : 2 5
K                    : 59 59
O                    : 28
OPREL                : 59
Q                    : 22
SP                   : 1 17
STATEMENTS           : 19
T                    : 45 46 47 48 49
TEXT                 : 23 37
TIPO                 : 2
TL                   : 54 55 56 57
U                    : 21 23 36 41 52
VARIABLE             : 1 2
X                    : 1 17 19 25 26 27 28 43
Z                    : 12 13 13 14 14 14
program              : 0

Parsing method: SLR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM ID VARIABLE SP X END

    PROGRAM         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAM . ID VARIABLE SP X END

    ID              shift and go to state 3


state 3

    (1) program -> PROGRAM ID . VARIABLE SP X END
    (2) VARIABLE -> . DIM IDLIST AS TIPO SEMMICOLON VARIABLE
    (3) VARIABLE -> .

    DIM             shift and go to state 5
    SUBPROCEDURE    reduce using rule 3 (VARIABLE -> .)
    LET             reduce using rule 3 (VARIABLE -> .)
    PRINT           reduce using rule 3 (VARIABLE -> .)
    INPUT           reduce using rule 3 (VARIABLE -> .)
    CLS             reduce using rule 3 (VARIABLE -> .)
    IF              reduce using rule 3 (VARIABLE -> .)
    WHILE           reduce using rule 3 (VARIABLE -> .)
    DO              reduce using rule 3 (VARIABLE -> .)
    FOR             reduce using rule 3 (VARIABLE -> .)
    GOSUB           reduce using rule 3 (VARIABLE -> .)
    END             reduce using rule 3 (VARIABLE -> .)

    VARIABLE                       shift and go to state 4

state 4

    (1) program -> PROGRAM ID VARIABLE . SP X END
    (17) SP -> . SUBPROCEDURE ID X ENDSUB SEMMICOLON SP
    (18) SP -> .

    SUBPROCEDURE    shift and go to state 7
    LET             reduce using rule 18 (SP -> .)
    PRINT           reduce using rule 18 (SP -> .)
    INPUT           reduce using rule 18 (SP -> .)
    CLS             reduce using rule 18 (SP -> .)
    IF              reduce using rule 18 (SP -> .)
    WHILE           reduce using rule 18 (SP -> .)
    DO              reduce using rule 18 (SP -> .)
    FOR             reduce using rule 18 (SP -> .)
    GOSUB           reduce using rule 18 (SP -> .)
    END             reduce using rule 18 (SP -> .)

    SP                             shift and go to state 6

state 5

    (2) VARIABLE -> DIM . IDLIST AS TIPO SEMMICOLON VARIABLE
    (4) IDLIST -> . ID
    (5) IDLIST -> . IDLIST COMMA ID
    (6) IDLIST -> .

    ID              shift and go to state 9
    AS              reduce using rule 6 (IDLIST -> .)
    COMMA           reduce using rule 6 (IDLIST -> .)

    IDLIST                         shift and go to state 8

state 6

    (1) program -> PROGRAM ID VARIABLE SP . X END
    (19) X -> . STATEMENTS SEMMICOLON X
    (20) X -> .
    (21) STATEMENTS -> . LET U ASSIGN E
    (22) STATEMENTS -> . PRINT Q
    (23) STATEMENTS -> . INPUT TEXT GTGT U
    (24) STATEMENTS -> . CLS
    (25) STATEMENTS -> . IF EL THEN X ELSE1 ENDIF
    (26) STATEMENTS -> . WHILE EL X WHEND
    (27) STATEMENTS -> . DO X LOOPUNTIL EL ENDO
    (28) STATEMENTS -> . FOR O TO E X NEXT
    (29) STATEMENTS -> . GOSUB ID

    END             reduce using rule 20 (X -> .)
    ENDSUB          reduce using rule 20 (X -> .)
    ELSE            reduce using rule 20 (X -> .)
    ENDIF           reduce using rule 20 (X -> .)
    WHEND           reduce using rule 20 (X -> .)
    LOOPUNTIL       reduce using rule 20 (X -> .)
    NEXT            reduce using rule 20 (X -> .)
    LET             shift and go to state 12
    PRINT           shift and go to state 13
    INPUT           shift and go to state 14
    CLS             shift and go to state 15
    IF              shift and go to state 16
    WHILE           shift and go to state 17
    DO              shift and go to state 18
    FOR             shift and go to state 19
    GOSUB           shift and go to state 20

    X                              shift and go to state 10
    STATEMENTS                     shift and go to state 11

state 7

    (17) SP -> SUBPROCEDURE . ID X ENDSUB SEMMICOLON SP

    ID              shift and go to state 21


state 8

    (2) VARIABLE -> DIM IDLIST . AS TIPO SEMMICOLON VARIABLE
    (5) IDLIST -> IDLIST . COMMA ID

    AS              shift and go to state 22
    COMMA           shift and go to state 23


state 9

    (4) IDLIST -> ID .

    AS              reduce using rule 4 (IDLIST -> ID .)
    COMMA           reduce using rule 4 (IDLIST -> ID .)


state 10

    (1) program -> PROGRAM ID VARIABLE SP X . END

    END             shift and go to state 24


state 11

    (19) X -> STATEMENTS . SEMMICOLON X

    SEMMICOLON      shift and go to state 25


state 12

    (21) STATEMENTS -> LET . U ASSIGN E
    (32) U -> . ID
    (33) U -> . ID DCLARRAY
    (34) U -> . ID DCLMATRIX
    (35) U -> . ID DCLCUBE

    ID              shift and go to state 27

    U                              shift and go to state 26

state 13

    (22) STATEMENTS -> PRINT . Q
    (36) Q -> . LPARENT U RPARENT
    (37) Q -> . TEXT
    (38) TEXT -> . LPARENT STRING H RPARENT
    (39) TEXT -> .

    LPARENT         shift and go to state 29
    GTGT            reduce using rule 39 (TEXT -> .)
    SEMMICOLON      reduce using rule 39 (TEXT -> .)

    Q                              shift and go to state 28
    TEXT                           shift and go to state 30

state 14

    (23) STATEMENTS -> INPUT . TEXT GTGT U
    (38) TEXT -> . LPARENT STRING H RPARENT
    (39) TEXT -> .

    LPARENT         shift and go to state 32
    GTGT            reduce using rule 39 (TEXT -> .)
    SEMMICOLON      reduce using rule 39 (TEXT -> .)

    TEXT                           shift and go to state 31

state 15

    (24) STATEMENTS -> CLS .

    SEMMICOLON      reduce using rule 24 (STATEMENTS -> CLS .)


state 16

    (25) STATEMENTS -> IF . EL THEN X ELSE1 ENDIF
    (54) EL -> . EL OR TL
    (55) EL -> . TL NOT
    (56) EL -> . TL
    (57) TL -> . TL AND FL
    (58) TL -> . FL
    (59) FL -> . K OPREL K
    (60) FL -> . LPARENT EL RPARENT
    (67) K -> . ID
    (68) K -> . NUMBER

    LPARENT         shift and go to state 37
    ID              shift and go to state 38
    NUMBER          shift and go to state 39

    EL                             shift and go to state 33
    TL                             shift and go to state 34
    FL                             shift and go to state 35
    K                              shift and go to state 36

state 17

    (26) STATEMENTS -> WHILE . EL X WHEND
    (54) EL -> . EL OR TL
    (55) EL -> . TL NOT
    (56) EL -> . TL
    (57) TL -> . TL AND FL
    (58) TL -> . FL
    (59) FL -> . K OPREL K
    (60) FL -> . LPARENT EL RPARENT
    (67) K -> . ID
    (68) K -> . NUMBER

    LPARENT         shift and go to state 37
    ID              shift and go to state 38
    NUMBER          shift and go to state 39

    EL                             shift and go to state 40
    TL                             shift and go to state 34
    FL                             shift and go to state 35
    K                              shift and go to state 36

state 18

    (27) STATEMENTS -> DO . X LOOPUNTIL EL ENDO
    (19) X -> . STATEMENTS SEMMICOLON X
    (20) X -> .
    (21) STATEMENTS -> . LET U ASSIGN E
    (22) STATEMENTS -> . PRINT Q
    (23) STATEMENTS -> . INPUT TEXT GTGT U
    (24) STATEMENTS -> . CLS
    (25) STATEMENTS -> . IF EL THEN X ELSE1 ENDIF
    (26) STATEMENTS -> . WHILE EL X WHEND
    (27) STATEMENTS -> . DO X LOOPUNTIL EL ENDO
    (28) STATEMENTS -> . FOR O TO E X NEXT
    (29) STATEMENTS -> . GOSUB ID

    END             reduce using rule 20 (X -> .)
    ENDSUB          reduce using rule 20 (X -> .)
    ELSE            reduce using rule 20 (X -> .)
    ENDIF           reduce using rule 20 (X -> .)
    WHEND           reduce using rule 20 (X -> .)
    LOOPUNTIL       reduce using rule 20 (X -> .)
    NEXT            reduce using rule 20 (X -> .)
    LET             shift and go to state 12
    PRINT           shift and go to state 13
    INPUT           shift and go to state 14
    CLS             shift and go to state 15
    IF              shift and go to state 16
    WHILE           shift and go to state 17
    DO              shift and go to state 18
    FOR             shift and go to state 19
    GOSUB           shift and go to state 20

    X                              shift and go to state 41
    STATEMENTS                     shift and go to state 11

state 19

    (28) STATEMENTS -> FOR . O TO E X NEXT
    (30) O -> . E
    (31) O -> . E ASSIGN E
    (45) E -> . E PLUS T
    (46) E -> . E MINUS T
    (47) E -> . T
    (48) T -> . T TIMES F
    (49) T -> . T DIVIDE F
    (50) T -> . F
    (51) F -> . NUMBER
    (52) F -> . U
    (53) F -> . LPARENT E RPARENT
    (32) U -> . ID
    (33) U -> . ID DCLARRAY
    (34) U -> . ID DCLMATRIX
    (35) U -> . ID DCLCUBE

    NUMBER          shift and go to state 46
    LPARENT         shift and go to state 48
    ID              shift and go to state 27

    O                              shift and go to state 42
    E                              shift and go to state 43
    T                              shift and go to state 44
    F                              shift and go to state 45
    U                              shift and go to state 47

state 20

    (29) STATEMENTS -> GOSUB . ID

    ID              shift and go to state 49


state 21

    (17) SP -> SUBPROCEDURE ID . X ENDSUB SEMMICOLON SP
    (19) X -> . STATEMENTS SEMMICOLON X
    (20) X -> .
    (21) STATEMENTS -> . LET U ASSIGN E
    (22) STATEMENTS -> . PRINT Q
    (23) STATEMENTS -> . INPUT TEXT GTGT U
    (24) STATEMENTS -> . CLS
    (25) STATEMENTS -> . IF EL THEN X ELSE1 ENDIF
    (26) STATEMENTS -> . WHILE EL X WHEND
    (27) STATEMENTS -> . DO X LOOPUNTIL EL ENDO
    (28) STATEMENTS -> . FOR O TO E X NEXT
    (29) STATEMENTS -> . GOSUB ID

    END             reduce using rule 20 (X -> .)
    ENDSUB          reduce using rule 20 (X -> .)
    ELSE            reduce using rule 20 (X -> .)
    ENDIF           reduce using rule 20 (X -> .)
    WHEND           reduce using rule 20 (X -> .)
    LOOPUNTIL       reduce using rule 20 (X -> .)
    NEXT            reduce using rule 20 (X -> .)
    LET             shift and go to state 12
    PRINT           shift and go to state 13
    INPUT           shift and go to state 14
    CLS             shift and go to state 15
    IF              shift and go to state 16
    WHILE           shift and go to state 17
    DO              shift and go to state 18
    FOR             shift and go to state 19
    GOSUB           shift and go to state 20

    X                              shift and go to state 50
    STATEMENTS                     shift and go to state 11

state 22

    (2) VARIABLE -> DIM IDLIST AS . TIPO SEMMICOLON VARIABLE
    (7) TIPO -> . WORD
    (8) TIPO -> . FLOAT
    (9) TIPO -> . ARRAY DCLARRAY
    (10) TIPO -> . MATRIX DCLMATRIX
    (11) TIPO -> . CUBE DCLCUBE

    WORD            shift and go to state 52
    FLOAT           shift and go to state 53
    ARRAY           shift and go to state 54
    MATRIX          shift and go to state 55
    CUBE            shift and go to state 56

    TIPO                           shift and go to state 51

state 23

    (5) IDLIST -> IDLIST COMMA . ID

    ID              shift and go to state 57


state 24

    (1) program -> PROGRAM ID VARIABLE SP X END .

    $end            reduce using rule 1 (program -> PROGRAM ID VARIABLE SP X END .)


state 25

    (19) X -> STATEMENTS SEMMICOLON . X
    (19) X -> . STATEMENTS SEMMICOLON X
    (20) X -> .
    (21) STATEMENTS -> . LET U ASSIGN E
    (22) STATEMENTS -> . PRINT Q
    (23) STATEMENTS -> . INPUT TEXT GTGT U
    (24) STATEMENTS -> . CLS
    (25) STATEMENTS -> . IF EL THEN X ELSE1 ENDIF
    (26) STATEMENTS -> . WHILE EL X WHEND
    (27) STATEMENTS -> . DO X LOOPUNTIL EL ENDO
    (28) STATEMENTS -> . FOR O TO E X NEXT
    (29) STATEMENTS -> . GOSUB ID

    END             reduce using rule 20 (X -> .)
    ENDSUB          reduce using rule 20 (X -> .)
    ELSE            reduce using rule 20 (X -> .)
    ENDIF           reduce using rule 20 (X -> .)
    WHEND           reduce using rule 20 (X -> .)
    LOOPUNTIL       reduce using rule 20 (X -> .)
    NEXT            reduce using rule 20 (X -> .)
    LET             shift and go to state 12
    PRINT           shift and go to state 13
    INPUT           shift and go to state 14
    CLS             shift and go to state 15
    IF              shift and go to state 16
    WHILE           shift and go to state 17
    DO              shift and go to state 18
    FOR             shift and go to state 19
    GOSUB           shift and go to state 20

    STATEMENTS                     shift and go to state 11
    X                              shift and go to state 58

state 26

    (21) STATEMENTS -> LET U . ASSIGN E

    ASSIGN          shift and go to state 59


state 27

    (32) U -> ID .
    (33) U -> ID . DCLARRAY
    (34) U -> ID . DCLMATRIX
    (35) U -> ID . DCLCUBE
    (12) DCLARRAY -> . LBRACKET Z RBRACKET
    (13) DCLMATRIX -> . LBRACKET Z RBRACKET LBRACKET Z RBRACKET
    (14) DCLCUBE -> . LBRACKET Z RBRACKET LBRACKET Z RBRACKET LBRACKET Z RBRACKET

    ASSIGN          reduce using rule 32 (U -> ID .)
    SEMMICOLON      reduce using rule 32 (U -> ID .)
    RPARENT         reduce using rule 32 (U -> ID .)
    PLUS            reduce using rule 32 (U -> ID .)
    LET             reduce using rule 32 (U -> ID .)
    PRINT           reduce using rule 32 (U -> ID .)
    INPUT           reduce using rule 32 (U -> ID .)
    CLS             reduce using rule 32 (U -> ID .)
    IF              reduce using rule 32 (U -> ID .)
    WHILE           reduce using rule 32 (U -> ID .)
    DO              reduce using rule 32 (U -> ID .)
    FOR             reduce using rule 32 (U -> ID .)
    GOSUB           reduce using rule 32 (U -> ID .)
    NEXT            reduce using rule 32 (U -> ID .)
    TO              reduce using rule 32 (U -> ID .)
    MINUS           reduce using rule 32 (U -> ID .)
    TIMES           reduce using rule 32 (U -> ID .)
    DIVIDE          reduce using rule 32 (U -> ID .)
    LBRACKET        shift and go to state 63

    DCLARRAY                       shift and go to state 60
    DCLMATRIX                      shift and go to state 61
    DCLCUBE                        shift and go to state 62

state 28

    (22) STATEMENTS -> PRINT Q .

    SEMMICOLON      reduce using rule 22 (STATEMENTS -> PRINT Q .)


state 29

    (36) Q -> LPARENT . U RPARENT
    (38) TEXT -> LPARENT . STRING H RPARENT
    (32) U -> . ID
    (33) U -> . ID DCLARRAY
    (34) U -> . ID DCLMATRIX
    (35) U -> . ID DCLCUBE

    STRING          shift and go to state 65
    ID              shift and go to state 27

    U                              shift and go to state 64

state 30

    (37) Q -> TEXT .

    SEMMICOLON      reduce using rule 37 (Q -> TEXT .)


state 31

    (23) STATEMENTS -> INPUT TEXT . GTGT U

    GTGT            shift and go to state 66


state 32

    (38) TEXT -> LPARENT . STRING H RPARENT

    STRING          shift and go to state 65


state 33

    (25) STATEMENTS -> IF EL . THEN X ELSE1 ENDIF
    (54) EL -> EL . OR TL

    THEN            shift and go to state 67
    OR              shift and go to state 68


state 34

    (55) EL -> TL . NOT
    (56) EL -> TL .
    (57) TL -> TL . AND FL

    NOT             shift and go to state 69
    THEN            reduce using rule 56 (EL -> TL .)
    LET             reduce using rule 56 (EL -> TL .)
    PRINT           reduce using rule 56 (EL -> TL .)
    INPUT           reduce using rule 56 (EL -> TL .)
    CLS             reduce using rule 56 (EL -> TL .)
    IF              reduce using rule 56 (EL -> TL .)
    WHILE           reduce using rule 56 (EL -> TL .)
    DO              reduce using rule 56 (EL -> TL .)
    FOR             reduce using rule 56 (EL -> TL .)
    GOSUB           reduce using rule 56 (EL -> TL .)
    WHEND           reduce using rule 56 (EL -> TL .)
    ENDO            reduce using rule 56 (EL -> TL .)
    OR              reduce using rule 56 (EL -> TL .)
    RPARENT         reduce using rule 56 (EL -> TL .)
    AND             shift and go to state 70


state 35

    (58) TL -> FL .

    THEN            reduce using rule 58 (TL -> FL .)
    LET             reduce using rule 58 (TL -> FL .)
    PRINT           reduce using rule 58 (TL -> FL .)
    INPUT           reduce using rule 58 (TL -> FL .)
    CLS             reduce using rule 58 (TL -> FL .)
    IF              reduce using rule 58 (TL -> FL .)
    WHILE           reduce using rule 58 (TL -> FL .)
    DO              reduce using rule 58 (TL -> FL .)
    FOR             reduce using rule 58 (TL -> FL .)
    GOSUB           reduce using rule 58 (TL -> FL .)
    WHEND           reduce using rule 58 (TL -> FL .)
    ENDO            reduce using rule 58 (TL -> FL .)
    OR              reduce using rule 58 (TL -> FL .)
    NOT             reduce using rule 58 (TL -> FL .)
    AND             reduce using rule 58 (TL -> FL .)
    RPARENT         reduce using rule 58 (TL -> FL .)


state 36

    (59) FL -> K . OPREL K
    (61) OPREL -> . LT
    (62) OPREL -> . LTE
    (63) OPREL -> . GT
    (64) OPREL -> . GTE
    (65) OPREL -> . NE
    (66) OPREL -> . EQUAL

    LT              shift and go to state 72
    LTE             shift and go to state 73
    GT              shift and go to state 74
    GTE             shift and go to state 75
    NE              shift and go to state 76
    EQUAL           shift and go to state 77

    OPREL                          shift and go to state 71

state 37

    (60) FL -> LPARENT . EL RPARENT
    (54) EL -> . EL OR TL
    (55) EL -> . TL NOT
    (56) EL -> . TL
    (57) TL -> . TL AND FL
    (58) TL -> . FL
    (59) FL -> . K OPREL K
    (60) FL -> . LPARENT EL RPARENT
    (67) K -> . ID
    (68) K -> . NUMBER

    LPARENT         shift and go to state 37
    ID              shift and go to state 38
    NUMBER          shift and go to state 39

    EL                             shift and go to state 78
    TL                             shift and go to state 34
    FL                             shift and go to state 35
    K                              shift and go to state 36

state 38

    (67) K -> ID .
